    Type: bugfix
    Changed: wc/filter/rules/HtmlrewriteRule.py,
      wc/filter/html/HtmlFilter.py

  * New filter rule to remove <sourcetext> and <parsererror> elements
    which could hang Mozilla based browsers.
    Type: feature
    Changed: config/misc.zap

  * When handling HTML attribute values make sure they are not None.
    Type: bugfix
    Changed: wc/filter/html/*.py

2.33 "The Stunt Man" (released 12.10.2005)

  * Added enable class attr to filters, allowing them to be disabled
    automatically if a needed dependency could not be loaded.
    Type: feature
    Changed: wc/configuration.py, wc/filters/*.py

  * If a server has a list of IP addresses and the first one failed, try
    also the other ones if they allow a connect.
    Type: feature
    Changed: wc/proxy/ClientServerMatchmaker.py, wc/proxy/Dispatcher.py

  * Support chunked encoding trailers for client and server.
    Type: feature
    Changed: wc/proxy/{Headers,HttpClient,HttpServer}.py

  * Support replacing of header values only when they exist.
    Type: feature
    Changed: templates/classic/macros/rules.html, config/filter.dtd,
      wc/filter/rules/HeaderRule.py, wc/filter/Header.py,
      wc/webgui/context/filterconfig_html.py

  * Added check for SSL support before generating SSL certificates.
    Type: feature
    Changed: webcleaner-certificates

  * Document software requirements for filter modules in the web
    interface, and disable configuration of features with missing
    requirements.
    Type: feature
    Changed: templates/classic/{help,configuration}.html,
      wc/webgui/context/configuration_html.py

  * Improve the restart page by asking a question before actually
    restarting. Use links to this page instead of form buttons.
    Type: feature
    Added: templates/classic/restart_ask.html,
      wc/webgui/context/restart_ask_html.py
    Changed: setup.py, templates/classic/{adminpass, configuration}.html
